--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,6 @@
         <div class="sidebar-lists-container">
           <div class="sidebar-header">Lists</div>
           <div class="sidebar-lists">
-            <div class="lists">General</div>
-            <div class="lists">Training</div>
           </div>
         </div>
 
@@ -44,25 +42,6 @@
         </div>
 
         <div class="main-content">
-
-          <div class="todo-card-container">
-            <div class="todo-card">
-              <div class="card-icon">icon</div>
-              <div class="card-info">card info</div>
-            </div>
-            <div class="todo-card">
-              <div class="card-icon">icon</div>
-              <div class="card-info">card info</div>
-            </div>
-            <div class="todo-card">
-              <div class="card-icon">icon</div>
-              <div class="card-info">card info</div>
-            </div>
-            <div class="todo-card">
-              <div class="card-icon">icon</div>
-              <div class="card-info">card info</div>
-            </div>
-          </div>
 
           <div class="add-btns">
             <button type="button" class="add-list-btn">+List</button>
@@ -76,5 +55,36 @@
       <div class="footer-text">Created by Mark Melnik</div>
     </div>
   </div>
+
+  <form class="todo-form">
+    <div class="input-field">
+      <label for="title">Title</label>
+      <input type="text" id="title" name="title">
+    </div>
+    <div class="input-field">
+      <label for="description">Description</label>
+      <input type="description" id="description" name="description">
+    </div>
+    <div class="input-field">
+      <label for="dueDate">Due Date:</label>
+      <input type="dueDate" id="dueDate" name="dueDate">
+    </div>
+    <div>
+      <button type="submit" class="todo-submit-btn">Submit</button>
+    </div>
+  </form>
+
+  <form class="list-form">
+    <div class="input-field">
+      <label for="list-title">Title</label>
+      <input type="text" id="list-title" name="list-title">
+    </div>
+    <div>
+      <button type="submit" class="list-submit-btn">Submit</button>
+    </div>
+  </form>
+
+
+  <script src="index.js"></script>
 </body>
 </html>
